--- a/k8s/gateway/gateway-deployment.yaml
+++ b/k8s/gateway/gateway-deployment.yaml
@@ -24,7 +24,7 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: "k8s"
             - name: JAVA_OPTS
-              value: "-XX:+UseContainerSupport -XX:MaxRAMPercentage=60.0 -XX:+UseG1GC -XX:+UseStringDeduplication -Xms256m -Xmx384m"
+              value: "--enable-preview -XX:+UseContainerSupport -XX:MaxRAMPercentage=60.0 -XX:+UseG1GC -XX:+UseStringDeduplication -Xms256m -Xmx384m"
             - name: REDIS_HOST
               value: "redis-service"  # 如果 Redis 部署在同一集群，使用 Service 名称
             - name: REDIS_PORT
