feat:handle all flow

--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -11,3 +11,11 @@ metadata:
   name: services
   labels:
     name: services
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: export-control
+  labels:
+    name: export-control
+    type: business
